Sun Feb 10 22:33:15 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/asm/Reference.java: new constructor
	  Reference(String) for instance.

	* net/loveruby/cflat/ast/AST.java: #declarations should include
	  vardecls.

	* net/loveruby/cflat/ast/UndefinedVariable.java: #address should
	  return variable symbol.

	* net/loveruby/cflat/compiler/LocalReferenceResolver.java:
	  declarations may include variable declaration.

	* test/vardecl.cb: test reference of declared external variable.

Fri Feb  8 04:59:38 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/JumpResolver.java: remove
	  currentBreakTarget and currentContinueTarget to simplify.

Fri Feb  8 04:46:14 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/JumpResolver.java
	  (currentBreakTarget, currentContinueTarget): does not throw
	  exception.

	* net/loveruby/cflat/compiler/JumpResolver.java: add preproc tags.

Sun Feb  3 18:37:21 2008  Minero Aoki  <aamine@loveruby.net>

	* build.xml: unify task: jar and compile.

Sun Feb  3 18:36:52 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/parser/Parser.jj: refactoring: extract
	  method: new method addKnownTypedefs.

Sun Feb  3 18:30:18 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/Compiler.java (dumpTokenList):
	  specialToken handling was wrong.  We should trace t.specialToken
	  while it becomes null, then follow t.next.

	* net/loveruby/cflat/parser/Parser.jj: write token name for
	  special tokens.

Mon Jan 21 05:37:28 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/Compiler.java: new command line
	  option -v (show arguments of external command invocation).

Mon Jan 21 05:28:46 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/Compiler.java: new command line
	  option -S (generate assembly source and quit).

	* net/loveruby/cflat/compiler/Compiler.java: new command line
	  option -c (assemble and quit).
