@@ -1,3 +1,12 @@
+Mon Feb 11 00:17:28 2008  Minero Aoki  <aamine@loveruby.net>
+
+	* net/loveruby/cflat/compiler/LocalReferenceResolver.java: add
+	  preproc tag.
+
+	* net/loveruby/cflat/ast/Scope.java: ditto.
+
+	* net/loveruby/cflat/ast/ToplevelScope.java: ditto.
+
 Sun Feb 10 22:33:15 2008  Minero Aoki  <aamine@loveruby.net>
 
 	* net/loveruby/cflat/asm/Reference.java: new constructor
